# SignalOSSuite

./: .replit  COMPLETION_REPORT.md  IMPLEMENTATION_PHASES.md  INSTALLATION_GUIDE.md  PRODUCTION_DEPLOYMENT_REPORT.md  admin_panel.py  admin_routes.py  admin_sample_data.py  app.py  check_status.py  comprehensive_qa_audit.py  comprehensive_qa_audit_report.txt  dashboard_debug_summary.md  database_setup.py  demo_signals.json  demo_trades.json  fix_log.txt  fix_remaining_bugs.py  gunicorn.conf.py  health_monitor.py  main.py  models.py  package-lock.json  package.json  production_readiness_audit.py  pyproject.toml  qa_audit_results.py  replit.md  run.py  signal_parser.py  signalos_test_report.txt  stealth_settings.py  tailwind.config.js  wsgi.py
assets/: SignalOS_EA.mq5  styles.qss
attached_assets/: Pasted--Context-SignalOS-is-a-next-gen-trading-signal-copier-platform-with-a-premium-UI-and-partially-c-1750447857427_1750447857428.txt  Pasted--Context-You-are-reviewing-the-final-integrated-build-of-SignalOS-which-consists-of-1-W-1750416913359_1750416913361.txt  Pasted--Context-You-re-addressing-13-critical-system-issues-in-the-production-build-of-SignalOS-Web-Da-1750439487334_1750439487346.txt  Pasted--Context-You-re-now-in-the-final-phase-of-preparing-SignalOS-for-production-The-core-system-pa-1750417259440_1750417259442.txt  Pasted--Context-You-re-redesigning-the-entire-UI-UX-of-SignalOS-to-match-modern-premium-SaaS-trading-p-1750421612132_1750421612133.txt  (+8 more)
config/: settings.py
core/: __init__.py  advanced_execution_engine.py  advanced_risk_manager.py  health_monitor.py  (+13 more)
(+75 files in other folders)
