[project]
name = "signalos-trading-platform"
version = "1.0.0"
description = "SignalOS - Premium Forex Signal Automation Platform"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "gunicorn>=23.0.0",
    "psutil>=7.0.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
    "werkzeug>=3.1.3",
    "psycopg2-binary>=2.9.10",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.3",
    "sqlalchemy>=2.0.41",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "pandas>=2.3.0",
    "flask-admin>=1.6.1",
    "wtforms>=3.2.1",
    "flask-wtf>=1.2.2",
    "eventlet>=0.40.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "frontend*", "desktop_app*", "attached_assets*", "instance*"]
